--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website using git.</title>
+    <link rel="stylesheet" href="style/blog.css".css">
 </head>
 <body>
     <h3>this is my headline</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos veniam laborum iure reprehenderit corporis molestiae tempore minus eveniet eum odit architecto, ut atque, dolor magni sint, asperiores nostrum tempora. Corrupti.</p>
+    <p class="lorem">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos veniam laborum iure reprehenderit corporis molestiae tempore minus eveniet eum odit architecto, ut atque, dolor magni sint, asperiores nostrum tempora. Corrupti.</p>
 </body>
 </html>
